# ecologits-calculator

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  __init__.py  app.py  constants.py  content.py  electricity_mix.py  impacts.py  models.py  pyproject.toml  requirements-dev.txt  requirements.txt  style.css  token_estimator.py  utils.py
.github/workflows/: main.yml  push-to-hf.yml
data/: electricity_mix.csv  mixes.py
src/: __init__.py  assets.py  calculator.py  company.py  constants.py  content.py  electricity_mix.py  expert.py  impacts.py  latency_estimator.py  models.py  scrapper.py  token_estimator.py  utils.py
src/data/: electricity_mix.csv  throughputs.json
