[project]
name = "ecologits-calculator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ecologits",
#    "ecologits>=0.9.0,<0.10.0",    TODO: Change after the release
    "pint>=0.24.4",
    "plotly>=6.2.0",
    "streamlit>=1.47.1",
    "tiktoken>=0.9.0",
]

[tool.uv.sources]
ecologits = { git = "https://github.com/genai-impact/ecologits" }

[dependency-groups]
dev = [
    "watchdog>=6.0.0",
]
